TFP-5694 task for å migrere hendelser (#1284)